--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <script src="https://api.mapbox.com/mapbox-gl-js/v1.11.0/mapbox-gl.js"></script>
   <link rel="stylesheet" href="https://api.mapbox.com/mapbox-gl-js/v1.11.0/mapbox-gl.css">
-  <link rel="stylesheet" href="./rt_tracker.css">
+  <link rel="stylesheet" href="./styles.css">
   <title>Real Time Tracker</title>
 </head>
 <body>
@@ -19,6 +19,6 @@
 
   </div>
   
-  <script type="text/javascript" src="./rt_tracker.js"></script>
+  <script type="text/javascript" src="./mapanimation.js"></script>
 </body>
 </html>
